<?xml version="1.0"?>
<package format="2">

	<name>ur5_controllers</name>
	<version>1.0.0</version>
	<description>ROS Control controllers and interface for the UR5 robot</description>

	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
	<author email="marta16@student.sdu.dk">Martin Androvich</author>
	<maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>ros_utils</depend>
	<depend>std_msgs</depend>
	<depend>xacro</depend>
	<depend>gazebo_ros</depend>
	<depend>controller_manager</depend>
	<depend>controller_interface</depend>
	<depend>effort_controllers</depend>
	<depend>joint_state_controller</depend>
	<depend>joint_state_publisher</depend>
	<depend>robot_state_publisher</depend>
	<depend>pluginlib</depend>
	
	<depend>ur5_msgs</depend>
	<depend>ur5_description</depend>
	<depend>ur5_dynamics</depend>
	<depend>ur5_gazebo</depend>

	<export>
		<controller_interface plugin="${prefix}/ur5_controllers_plugin.xml"/>
	</export>

</package>
