<?xml version="1.0"?>
<package format="2">

	<name>ur5_dynamics</name>
	<version>1.0.0</version>
	<description>Dynamics and kinematics of the UR5 robot</description>

	<author email="martinandrovich@gmail.com">Martin Androvich</author>
	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
	<maintainer email="martinandrovich@gmail.com">Martin Androvich</maintainer>

	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>urdf</depend>
	<depend>kdl_parser</depend>
	<depend>geometry_msgs</depend>

</package>
