<?xml version="1.0"?>
<package format="2">

	<name>ur5_msgs</name>
	<version>1.0.0</version>
	<description>ROS messages/services for the UR5 robots</description>

	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
	<author email="marta16@student.sdu.dk">Martin Androvich</author>
	<maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>actionlib_msgs</depend>
	<exec_depend>message_runtime</exec_depend>
	<build_export_depend>message_runtime</build_export_depend>

	<export>
		<architecture_independent/>
	</export>

</package>