<?xml version="1.0"?>
<package format="2">

	<name>wsg50</name>
	<version>1.0.0</version>
	<description>URDF descriptions of the UR5 robot and WSG gripper</description>

	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
	<author email="marta16@student.sdu.dk">Martin Androvich</author>
	<maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>
	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>ros_utils</depend>
	<depend>std_msgs</depend>
	<depend>xacro</depend>
	<depend>gazebo_ros</depend>
	<depend>controller_manager</depend>
	<depend>controller_interface</depend>
	<depend>effort_controllers</depend>
	<depend>joint_state_controller</depend>
	<depend>joint_state_publisher</depend>
	<depend>robot_state_publisher</depend>
	<depend>pluginlib</depend>
	
	<export>
		<controller_interface plugin="${prefix}/wsg50_controllers_plugin.xml"/>
	</export>

</package>
